--- a/src/components/PerformanceItem.module.css
+++ b/src/components/PerformanceItem.module.css
@@ -2,7 +2,7 @@
   width: 300px;
   height: 65px;
   padding: 15px 20px;
-  color: var(--color-text);
+  color: var(--color-white);
   cursor: pointer;
   background: var(--color-surface);
   border-radius: 10px;
