--- a/src/components/Musics/index.module.css
+++ b/src/components/Musics/index.module.css
@@ -1,4 +1,4 @@
-.performances {
+.musics {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -6,6 +6,7 @@
   list-style: none;
 }
 
-.performances li:hover {
+.musics li:hover {
   cursor: pointer;
 }
+
