--- a/src/components/Performances/index.module.css
+++ b/src/components/Performances/index.module.css
@@ -1,4 +1,4 @@
-.musics {
+.performances {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -6,6 +6,7 @@
   list-style: none;
 }
 
-.musics li:hover {
+.performances li:hover {
   cursor: pointer;
 }
+
