--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,8 +1,8 @@
 :root {
   --color-bg: #2e3238;
   --color-surface: #494f58;
-  --color-white: #F5F5F5;
-  --color-red: #FF6161;
-  --color-green: #61CC68;
-  --color-gray: #ABADB1;
+  --color-white: #f5f5f5;
+  --color-red: #ff6161;
+  --color-green: #61cc68;
+  --color-gray: #abadb1;
 }
