--- a/src/components/PerformanceItem/index.module.css
+++ b/src/components/PerformanceItem/index.module.css
@@ -1,6 +1,6 @@
 .performance {
   width: 300px;
-  height: 65px;
+  height: calc(65px + 30px);
   padding: 15px 20px;
   color: var(--color-white);
   cursor: pointer;
