--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,12 +14,20 @@ main {
 
 .row {
   display: flex;
+  gap: 10px;
   width: 100%;
 }
 
 .rowLeft {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   width: 340px;
-  height: calc(100vh - 60px - 200px);
-  padding-right: 10px;
-  overflow: scroll;
+}
+
+.rowRight{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: calc(100% - 350px);
 }
