--- a/src/components/Musics/index.module.css
+++ b/src/components/Musics/index.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  height: calc(100vh - 60px - 20px - 150px);
   padding: 0;
   margin: 0;
   list-style: none;
