--- a/src/components/NextTrackButton/index.module.css
+++ b/src/components/NextTrackButton/index.module.css
@@ -1,5 +1,5 @@
 .nextTrackButton {
   width: 100px;
   height: 100px;
-  background-color: var(--color-red);
+  background-color: var(--color-green);
 }
