--- a/src/components/Performances/index.module.css
+++ b/src/components/Performances/index.module.css
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 100%;
+  height: calc(100vh - 60px - 20px - 200px);
   padding: 0;
+  overflow-y: scroll;
   list-style: none;
 }
 
