--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -5,4 +5,7 @@
   --color-red: #ff6161;
   --color-green: #61cc68;
   --color-gray: #abadb1;
+  --color-yellow: #fbcc24;
+  --color-black: #000;
+  --color-glass: #ffffff59;
 }
