--- a/src/components/ForceMute/index.module.css
+++ b/src/components/ForceMute/index.module.css
@@ -1,8 +1,8 @@
 .forceMute {
   position: relative;
-  width: 105px;
-  height: 105px;
-  padding-top: 25px;
+  width: 95px;
+  height: 95px;
+  padding-top: 20px;
   font-size: 20px;
   font-weight: bold;
   color: var(--color-white);
@@ -14,15 +14,20 @@
 .glass {
   position: absolute;
   top: 0;
-  width: 105px;
-  height: 105px;
+  width: 95px;
+  height: 95px;
   background-color: var(--color-glass);
+  transition: 0.2s;
+}
 
+.glass:hover{
+  background-color: transparent;
+  transition: 0.2s;
 }
 
 .tigerStripe {
-  width: 110px;
-  height: 110px;
+  width: 100px;
+  height: 100px;
   padding: 2.5px;
   background: repeating-linear-gradient(
     135deg,
@@ -31,4 +36,48 @@
     var(--color-black) 10px,
     var(--color-black) 20px
   );
+}
+
+.modalOverlay {
+  position: fixed;
+  inset: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-modal-background);
+}
+
+.modalContent {
+  position: relative;
+  width: 1000px;
+  height: 500px;
+  padding-top: 125px;
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+  background-color: var(--color-white);
+  border-radius: 10px;
+}
+
+.modalButtons{
+  display: flex;
+  padding-left: 125px;
+  margin-top: 100px;
+
+}
+
+.closeButton{
+  width: 275px;
+  height: 100px;
+  background-color: var(--color-gray);
+  border-radius: 10px;
+}
+
+.muteButton{
+  width: 275px;
+  height: 100px;
+  margin-left: 200px;
+  background-color: var(--color-red);
+  border-radius: 10px;
 }
