--- a/src/components/ForceMute/index.module.css
+++ b/src/components/ForceMute/index.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 95px;
   height: 95px;
-  padding-top: 20px;
+  padding-top: 23px;
   font-size: 20px;
   font-weight: bold;
   color: var(--color-white);
@@ -17,7 +17,7 @@
   width: 95px;
   height: 95px;
   background-color: var(--color-glass);
-  transition: 0.2s;
+  cursor: pointer;
 }
 
 .glass:hover{
