--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -5,6 +5,7 @@
   --color-red: #ff6161;
   --color-green: #61cc68;
   --color-gray: #abadb1;
+  --color-light-gray: #e0e0e0;
   --color-yellow: #fbcc24;
   --color-black: #000;
   --color-glass: #ffffff59;
