--- a/src/components/DetailMenu/DetailMenuModal.module.css
+++ b/src/components/DetailMenu/DetailMenuModal.module.css
@@ -32,6 +32,7 @@
   display: grid;
   flex: 1;
   grid-template-columns: 1fr 1fr 2fr;
+  height: calc(100vh - 350px);
   padding: 20px;
   margin-top: 15px;
   overflow: hidden;
@@ -153,4 +154,34 @@
   background: var(--color-bg);
   border-radius: 50%;
   transform: translate(-50%, -50%);
+}
+
+.buttons{
+  display: flex;
+  gap: 10px;
+  justify-content: end;
+  margin-right: 100px;
+}
+
+.buttons .cancel, .buttons .save{
+  height: auto;
+  padding: 20px 40px;
+  font-size: 20px;
+  font-weight: bold;
+  border: solid 2px var(--color-surface);
+  border-radius: 40px;
+}
+
+.buttons .cancel:hover, .buttons .save:hover{
+  opacity: 0.7;
+}
+
+
+.buttons .cancel{
+  color: var(--color-surface);
+}
+
+.buttons .save{
+  color: var(--color-white);
+  background: var(--color-surface);
 }
