add TanStack Router and change file structures

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -9,5 +9,5 @@
   --color-yellow: #fbcc24;
   --color-black: #000;
   --color-glass: #ffffff59;
-  --color-modal-background: #00000099;
+  --color-modal-background: #0009;
 }
