--- a/src/components/CopyrightToggle/index.module.css
+++ b/src/components/CopyrightToggle/index.module.css
@@ -7,29 +7,29 @@
 .copyrightTitle {
     grid-row: 1 / 2;
 	grid-column: 1 / 4;
-    text-align:center;
     font-size: 26px;
     font-weight: bold;
     color: var(--color-white);
+    text-align:center;
 }
 
 .ToggleTextOff {
+    display: flex;
     grid-row: 2 / 3;
     grid-column: 1 / 2;
-    display: flex;
-    justify-content: flex-end;
     align-items: center;
+    justify-content: flex-end;
     font-size: 18px;
     font-weight: bold;
     color: var(--color-white);
 }
 
 .ToggleTextOn {
+    display: flex;
     grid-row: 2 / 3;
     grid-column: 3 / 4;
-    display: flex;
-    justify-content: flex-start;
     align-items: center;
+    justify-content: flex-start;
     font-size: 18px;
     font-weight: bold;
     color: var(--color-white);
@@ -41,52 +41,52 @@
   grid-column: 2 / 3;
   text-align: center;
 
-  --switchHeight: 66px;
-  --switchWidth: 120px;
-  --switchPadding: 0.2rem;
-  --circleSize: calc(var(--switchHeight) - var(--switchPadding) * 2);
+  --switch-height: 66px;
+  --switch-width: 120px;
+  --switch-padding: 0.2rem;
+  --circle-size: calc(var(--switch-height) - var(--switch-padding) * 2);
 }
 
 .switch {
-  display: inline-block;
   position: relative;
-  width: var(--switchWidth);
-  height: var(--switchHeight);
+  display: inline-block;
+  width: var(--switch-width);
+  height: var(--switch-height);
   border-radius: 9999px;
 }
 
 .switch > input {
   position: absolute;
   inset: 0;
-  opacity: 0;
   width: 100%;
   height: 100%;
   margin: 0;
   cursor: pointer;
+  opacity: 0;
 }
 
 .slider {
+  position: relative;
   display: block;
   width: 100%;
   height: 100%;
   background: var(--color-light-gray);
   border-radius: inherit;
   transition: 0.4s;
-  position: relative;
 }
 
 .slider::after {
-  content: '';
   position: absolute;
-  left: var(--switchPadding);
   top: 0;
   bottom: 0;
+  left: var(--switch-padding);
+  width: var(--circle-size);
+  height: var(--circle-size);
   margin: auto;
-  width: var(--circleSize);
-  height: var(--circleSize);
-  border-radius: 50%;
+  content: '';
   background: var(--color-white);
-  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgb(0 0 0 / 20%);
   transition: 0.4s;
 }
 
@@ -95,10 +95,10 @@
 }
 
 .switch > input:checked + .slider::after {
-  left: calc(100% - var(--circleSize) - var(--switchPadding));
+  left: calc(100% - var(--circle-size) - var(--switch-padding));
 }
 
 .switch > input:focus-visible + .slider {
-  outline: 2px solid rgba(0,0,0,0.25);
+  outline: 2px solid rgb(0 0 0 / 25%);
   outline-offset: 2px;
 }
