--- a/src/components/CopyrightToggle/index.module.css
+++ b/src/components/CopyrightToggle/index.module.css
@@ -1,41 +1,40 @@
 .copyright {
-    display: grid;
-    grid-template-rows: 34px 66px;
-    grid-template-columns: 40px 140px 40px;
+  display: grid;
+  grid-template-rows: 34px 66px;
+  grid-template-columns: 40px 140px 40px;
 }
 
 .copyrightTitle {
-    grid-row: 1 / 2;
-	grid-column: 1 / 4;
-    font-size: 26px;
-    font-weight: bold;
-    color: var(--color-white);
-    text-align:center;
+  grid-row: 1 / 2;
+  grid-column: 1 / 4;
+  font-size: 26px;
+  font-weight: bold;
+  color: var(--color-white);
+  text-align: center;
 }
 
 .ToggleTextOff {
-    display: flex;
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
-    align-items: center;
-    justify-content: flex-end;
-    font-size: 18px;
-    font-weight: bold;
-    color: var(--color-white);
+  display: flex;
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+  align-items: center;
+  justify-content: flex-end;
+  font-size: 18px;
+  font-weight: bold;
+  color: var(--color-white);
 }
 
 .ToggleTextOn {
-    display: flex;
-    grid-row: 2 / 3;
-    grid-column: 3 / 4;
-    align-items: center;
-    justify-content: flex-start;
-    font-size: 18px;
-    font-weight: bold;
-    color: var(--color-white);
+  display: flex;
+  grid-row: 2 / 3;
+  grid-column: 3 / 4;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 18px;
+  font-weight: bold;
+  color: var(--color-white);
 }
 
-/* 既存：配置や色はそのまま */
 .toggleButton {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
@@ -83,7 +82,7 @@
   width: var(--circle-size);
   height: var(--circle-size);
   margin: auto;
-  content: '';
+  content: "";
   background: var(--color-white);
   border-radius: 50%;
   box-shadow: 0 0 5px rgb(0 0 0 / 20%);
