--- a/src/components/ConversionScene/NextPerformanceDetail.module.css
+++ b/src/components/ConversionScene/NextPerformanceDetail.module.css
@@ -1,28 +1,28 @@
-.container{
+.container {
   display: flex;
   flex-direction: column;
   gap: 30px;
   max-width: 90%;
   padding: 60px 80px;
   font-weight: bold;
-  background: color-mix(in srgb, var(--color-surface) 20%, transparent);;
+  background: color-mix(in srgb, var(--color-surface) 20%, transparent);
   border-radius: 0 30px 0 0;
   paint-order: stroke fill;
 }
 
-.item{
+.item {
   display: flex;
   gap: 50px;
   align-items: center;
 }
 
-.left .starts_at{
+.left .starts_at {
   font-size: 48px;
   -webkit-text-stroke: 15px var(--color-white);
   color: var(--color-orange);
 }
 
-.left .nextLabel{
+.left .nextLabel {
   padding: 5px 23px;
   margin-top: 5px;
   font-size: 20px;
@@ -32,25 +32,25 @@
   border-radius: 6px;
 }
 
-.right{
+.right {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
 
-.right .title{
+.right .title {
   -webkit-text-stroke: 15px var(--color-white);
   font-size: 60px;
   color: var(--color-orange);
 }
 
-.right .performer{
+.right .performer {
   font-size: 27px;
   color: var(--color-orange);
   -webkit-text-stroke: 10px var(--color-white);
 }
 
-.description{
+.description {
   font-size: 40px;
   color: var(--color-black);
   -webkit-text-stroke: 15px var(--color-white);
