--- a/src/components/ConversionScene/NextPerformances.module.css
+++ b/src/components/ConversionScene/NextPerformances.module.css
@@ -1,13 +1,13 @@
-.container{
+.container {
   display: flex;
   flex-direction: column;
   gap: 30px;
   padding: 60px 80px;
-  background: color-mix(in srgb, var(--color-surface) 20%, transparent);;
+  background: color-mix(in srgb, var(--color-surface) 20%, transparent);
   border-radius: 0 30px 0 0;
 }
 
-.item{
+.item {
   display: flex;
   gap: 50px;
   align-items: center;
@@ -15,23 +15,23 @@
   paint-order: stroke fill;
 }
 
-.left .starts_at{
+.left .starts_at {
   font-size: 48px;
   -webkit-text-stroke: 15px var(--color-white);
 }
 
-.right{
+.right {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
 
-.right .title{
+.right .title {
   font-size: 48px;
   -webkit-text-stroke: 15px var(--color-white);
 }
 
-.item:first-child .left .nextLabel{
+.item:first-child .left .nextLabel {
   padding: 5px 23px;
   margin-top: 5px;
   font-size: 20px;
@@ -41,16 +41,16 @@
   border-radius: 6px;
 }
 
-.item:first-child .left .starts_at{
+.item:first-child .left .starts_at {
   color: var(--color-orange);
 }
 
-.item:first-child .right .title{
+.item:first-child .right .title {
   font-size: 60px;
   color: var(--color-orange);
 }
 
-.item:first-child .right .performer{
+.item:first-child .right .performer {
   font-size: 27px;
   color: var(--color-orange);
   -webkit-text-stroke: 10px var(--color-white);
