--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -10,5 +10,5 @@
   --color-black: #000;
   --color-glass: #ffffff59;
   --color-modal-background: #0009;
-  --color-orange: #EC6C1F;
+  --color-orange: #ec6c1f;
 }
