--- a/src/components/PerformanceScene/index.module.css
+++ b/src/components/PerformanceScene/index.module.css
@@ -6,18 +6,38 @@
 
 .performer {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 30px;
+  right: 0;
+  padding: 15px 15px 15px 40px;
+  font-size: 25px;
+  background: var(--color-light-gray);
+  border-radius: 40px 0 0 40px;
 }
 
 .musicTitle {
   position: absolute;
-  bottom: 20px;
-  left: 20px;
+  bottom: 30px;
+  left: 30px;
+  font-size: 20px;
+  color: var(--color-black);
+  text-shadow:
+    0 0 10px var(--color-white),
+    0 0 10px var(--color-white),
+    0 0 10px var(--color-white),
+    0 0 10px var(--color-white),
+    0 0 10px var(--color-white);
 }
 
 .shouldBeMuted {
   position: absolute;
-  right: 20px;
-  bottom: 20px;
+  right: 30px;
+  bottom: 30px;
+  font-size: 16px;
+  color: var(--color-black);
+  text-shadow:
+    0 0 10px var(--color-white),
+    0 0 10px var(--color-white),
+    0 0 10px var(--color-white),
+    0 0 10px var(--color-white),
+    0 0 10px var(--color-white);
 }
