--- a/src/components/ForceMute/index.module.css
+++ b/src/components/ForceMute/index.module.css
@@ -1,8 +1,10 @@
 .forceMute {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 95px;
   height: 95px;
-  padding-top: 23px;
   font-size: 20px;
   font-weight: bold;
   color: var(--color-white);
