--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -16,6 +16,12 @@
   list-style: none;
 }
 
+.clock {
+  padding: 5px;
+  border: 1px solid var(--color-gray);
+  border-radius: 5px;
+}
+
 .list > li > ul {
   display: flex;
   gap: 10px;
