--- a/src/components/CopyrightToggle/index.module.css
+++ b/src/components/CopyrightToggle/index.module.css
@@ -1,103 +1,14 @@
-.copyright {
-  display: grid;
-  grid-template-rows: 34px 66px;
-  grid-template-columns: 40px 140px 40px;
+.toggleRow {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
 }
 
 .copyrightTitle {
-  grid-row: 1 / 2;
-  grid-column: 1 / 4;
+  margin-bottom: 10px;
   font-size: 26px;
   font-weight: bold;
   color: var(--color-white);
   text-align: center;
-}
-
-.ToggleTextOff {
-  display: flex;
-  grid-row: 2 / 3;
-  grid-column: 1 / 2;
-  align-items: center;
-  justify-content: flex-end;
-  font-size: 18px;
-  font-weight: bold;
-  color: var(--color-white);
-}
-
-.ToggleTextOn {
-  display: flex;
-  grid-row: 2 / 3;
-  grid-column: 3 / 4;
-  align-items: center;
-  justify-content: flex-start;
-  font-size: 18px;
-  font-weight: bold;
-  color: var(--color-white);
-}
-
-.toggleButton {
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
-  text-align: center;
-
-  --switch-height: 66px;
-  --switch-width: 120px;
-  --switch-padding: 0.2rem;
-  --circle-size: calc(var(--switch-height) - var(--switch-padding) * 2);
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: var(--switch-width);
-  height: var(--switch-height);
-  border-radius: 9999px;
-}
-
-.switch > input {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  cursor: pointer;
-  opacity: 0;
-}
-
-.slider {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: var(--color-light-gray);
-  border-radius: inherit;
-  transition: 0.4s;
-}
-
-.slider::after {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: var(--switch-padding);
-  width: var(--circle-size);
-  height: var(--circle-size);
-  margin: auto;
-  content: "";
-  background: var(--color-white);
-  border-radius: 50%;
-  box-shadow: 0 0 5px rgb(0 0 0 / 20%);
-  transition: 0.4s;
-}
-
-.switch > input:checked + .slider {
-  background: var(--color-green);
-}
-
-.switch > input:checked + .slider::after {
-  left: calc(100% - var(--circle-size) - var(--switch-padding));
-}
-
-.switch > input:focus-visible + .slider {
-  outline: 2px solid rgb(0 0 0 / 25%);
-  outline-offset: 2px;
 }
