--- a/src/components/ConversionMenu/index.module.css
+++ b/src/components/ConversionMenu/index.module.css
@@ -17,8 +17,10 @@
 
 .info {
   display: flex;
-  flex: 1;
+  flex-direction: row;
+  gap: 120px;
   align-items: center;
-  justify-content: center;
-  font-size: 18px;
+  margin-left: 40px;
+  font-size: 24px;
+  font-weight: bold;
 }
