--- a/src/components/ConversionScene/CmMode.module.css
+++ b/src/components/ConversionScene/CmMode.module.css
@@ -1,19 +1,3 @@
 .container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  background-color: var(--color-black);
-}
-
-.text {
-  font-size: 120px;
-  font-weight: bold;
-  color: var(--color-white);
-  text-align: center;
+  color: var(--color-black);
 }
