--- a/src/components/ConversionScene/NextPerformances.module.css
+++ b/src/components/ConversionScene/NextPerformances.module.css
@@ -13,6 +13,19 @@
   align-items: center;
   font-weight: bold;
   paint-order: stroke fill;
+  animation: slideInFromLeft 1s ease-out;
+}
+
+.item:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.item:nth-child(2) {
+  animation-delay: 0.15s;
+}
+
+.item:nth-child(3) {
+  animation-delay: 0.3s;
 }
 
 .left .starts_at {
@@ -56,3 +69,14 @@
   -webkit-text-stroke: 10px var(--color-white);
 }
 
+@keyframes slideInFromLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
