--- a/src/components/ConversionScene/NextPerformances.module.css
+++ b/src/components/ConversionScene/NextPerformances.module.css
@@ -1,3 +1,5 @@
+@import url("./animations.module.css");
+
 .container {
   display: flex;
   flex-direction: column;
@@ -67,16 +69,4 @@
   font-size: 27px;
   color: var(--color-orange);
   -webkit-text-stroke: 10px var(--color-white);
-}
-
-@keyframes slideInFromLeft {
-  from {
-    opacity: 0;
-    transform: translateX(-100%);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
 }
