--- a/src/components/ConversionScene/CmMode.module.css
+++ b/src/components/ConversionScene/CmMode.module.css
@@ -1,3 +1,44 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  font-weight: bold;
   color: var(--color-black);
+  background-color: var(--color-white);
+}
+
+.top {
+  display: flex;
+  flex-direction: row;
+  height: 72vh;
+}
+
+.topGuides {
+  width: 25vw;
+}
+
+.bottom {
+  display: flex;
+  flex-direction: row;
+  height: 28vh;
+}
+
+.clock {
+  display: flex;
+  justify-content: center;
+  height: 11vh;
+  padding-top: 2vh;
+  font-size: 50px;
+}
+
+.nextGuide {
+  width: 21vw;
+  height: 61vh;
+  margin-left: 2vw;
+  border: 5px solid var(--color-blue);
+  border-radius: 50px;
+}
+
+.broadcast {
+  width: 75vw;
+  background-color: var(--color-blue);
 }
