--- a/src/components/ConversionScene/CmMode.module.css
+++ b/src/components/ConversionScene/CmMode.module.css
@@ -9,7 +9,7 @@
 .top {
   display: flex;
   flex-direction: row;
-  height: 72vh;
+  height: 75vh;
 }
 
 .topGuides {
@@ -19,7 +19,7 @@
 .bottom {
   display: flex;
   flex-direction: row;
-  height: 28vh;
+  height: 25vh;
 }
 
 .clock {
@@ -32,13 +32,69 @@
 
 .nextGuide {
   width: 21vw;
-  height: 61vh;
+  height: 64vh;
+  padding: 0 1vw;
   margin-left: 2vw;
   border: 5px solid var(--color-blue);
   border-radius: 50px;
 }
 
+.nextGuideTime {
+  margin-top: 8vh;
+  font-size: 30px;
+  color: var(--color-surface);
+}
+
+.nextGuideTitle {
+  margin-top: 1vh;
+  font-size: 28px;
+  color: var(--color-orange);
+}
+
+.nextGuideperformer {
+  margin-top: 1vh;
+  font-size: 23px;
+  color: var(--color-surface);
+}
+
+.nextGuideDescription {
+  margin-top: 1vh;
+  font-size: 23px;
+  color: var(--color-surface);
+}
+
 .broadcast {
   width: 75vw;
+  height: auto;
+  aspect-ratio: 16/9;
   background-color: var(--color-blue);
+}
+
+.laterGuide {
+  display: flex;
+  margin-left: 25vw;
+  color: var(--color-surface);
+}
+
+.laterGuideTime {
+  display: flex;
+  align-items: center;
+  width: 10vw;
+  font-size: 40px;
+}
+
+.laterGuideRight {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 2vw;
+}
+
+.laterGuideTitle {
+  font-size: 40px;
+}
+
+.laterGuidePerformer {
+  margin-left: 30vw;
+  font-size: 30px;
 }
