--- a/src/components/ConversionScene/CmMode.module.css
+++ b/src/components/ConversionScene/CmMode.module.css
@@ -91,7 +91,6 @@
 .laterGuideTime {
   display: flex;
   align-items: center;
-  width: 12vw;
   font-size: 40px;
 }
 
@@ -100,6 +99,7 @@
   flex-direction: column;
   justify-content: center;
   width: 63vw;
+  margin-left: 2vw;
 }
 
 .laterGuideTitle {
