Conversionのアニメーションのちらつき解消

--- a/src/components/ConversionScene/index.module.css
+++ b/src/components/ConversionScene/index.module.css
@@ -14,10 +14,12 @@
 
 .enter {
   animation: slideInFromBottom 1s ease-out;
+  animation-fill-mode: both;
 }
 
 .exit {
   animation: slideOutToBottom 1s ease-out;
+  animation-fill-mode: both;
 }
 
 @keyframes slideInFromBottom {
