--- a/src/components/ConversionScene/NextPerformanceDetail.module.css
+++ b/src/components/ConversionScene/NextPerformanceDetail.module.css
@@ -23,22 +23,7 @@
 .left .starts_at {
   font-size: 48px;
   color: var(--color-orange);
-  text-shadow:
-  0 0 1px var(--color-white),
-  0 0 2px var(--color-white),
-  0 0 3px var(--color-white),
-  0 0 4px var(--color-white),
-  0 0 5px var(--color-white),
-  0 0 6px var(--color-white),
-  0 0 7px var(--color-white),
-  0 0 8px var(--color-white),
-  0 0 9px var(--color-white),
-  0 0 10px var(--color-white),
-  0 0 11px var(--color-white),
-  0 0 12px var(--color-white),
-  0 0 13px var(--color-white),
-  0 0 14px var(--color-white),
-  0 0 15px var(--color-white);
+  text-shadow: var(--text-shadow-glow);
 }
 
 .left .nextLabel {
@@ -60,65 +45,20 @@
 .right .title {
   font-size: 60px;
   color: var(--color-orange);
-  text-shadow:
-  0 0 1px var(--color-white),
-  0 0 2px var(--color-white),
-  0 0 3px var(--color-white),
-  0 0 4px var(--color-white),
-  0 0 5px var(--color-white),
-  0 0 6px var(--color-white),
-  0 0 7px var(--color-white),
-  0 0 8px var(--color-white),
-  0 0 9px var(--color-white),
-  0 0 10px var(--color-white),
-  0 0 11px var(--color-white),
-  0 0 12px var(--color-white),
-  0 0 13px var(--color-white),
-  0 0 14px var(--color-white),
-  0 0 15px var(--color-white);
+  text-shadow: var(--text-shadow-glow);
 }
 
 .right .performer {
   font-size: 27px;
   color: var(--color-orange);
-  text-shadow:
-  0 0 1px var(--color-white),
-  0 0 2px var(--color-white),
-  0 0 3px var(--color-white),
-  0 0 4px var(--color-white),
-  0 0 5px var(--color-white),
-  0 0 6px var(--color-white),
-  0 0 7px var(--color-white),
-  0 0 8px var(--color-white),
-  0 0 9px var(--color-white),
-  0 0 10px var(--color-white),
-  0 0 11px var(--color-white),
-  0 0 12px var(--color-white),
-  0 0 13px var(--color-white),
-  0 0 14px var(--color-white),
-  0 0 15px var(--color-white);
+  text-shadow: var(--text-shadow-glow);
 }
 
 .description {
   font-size: 40px;
   color: var(--color-black);
   word-break: keep-all;
-  text-shadow:
-  0 0 1px var(--color-white),
-  0 0 2px var(--color-white),
-  0 0 3px var(--color-white),
-  0 0 4px var(--color-white),
-  0 0 5px var(--color-white),
-  0 0 6px var(--color-white),
-  0 0 7px var(--color-white),
-  0 0 8px var(--color-white),
-  0 0 9px var(--color-white),
-  0 0 10px var(--color-white),
-  0 0 11px var(--color-white),
-  0 0 12px var(--color-white),
-  0 0 13px var(--color-white),
-  0 0 14px var(--color-white),
-  0 0 15px var(--color-white);
+  text-shadow: var(--text-shadow-glow);
   animation: slideInFromLeft 1s ease-out;
   animation-delay: 0.15s;
 }
