--- a/src/components/ConversionScene/NextPerformances.module.css
+++ b/src/components/ConversionScene/NextPerformances.module.css
@@ -34,22 +34,8 @@
 
 .left .starts_at {
   font-size: 48px;
-  text-shadow:
-    0 0 1px var(--color-white),
-    0 0 2px var(--color-white),
-    0 0 3px var(--color-white),
-    0 0 4px var(--color-white),
-    0 0 5px var(--color-white),
-    0 0 6px var(--color-white),
-    0 0 7px var(--color-white),
-    0 0 8px var(--color-white),
-    0 0 9px var(--color-white),
-    0 0 10px var(--color-white),
-    0 0 11px var(--color-white),
-    0 0 12px var(--color-white),
-    0 0 13px var(--color-white),
-    0 0 14px var(--color-white),
-    0 0 15px var(--color-white);}
+  text-shadow: var(--text-shadow-glow);
+}
 
 .right {
   display: flex;
@@ -60,22 +46,7 @@
 .right .title {
   font-size: 48px;
   white-space: nowrap;
-  text-shadow:
-    0 0 1px var(--color-white),
-    0 0 2px var(--color-white),
-    0 0 3px var(--color-white),
-    0 0 4px var(--color-white),
-    0 0 5px var(--color-white),
-    0 0 6px var(--color-white),
-    0 0 7px var(--color-white),
-    0 0 8px var(--color-white),
-    0 0 9px var(--color-white),
-    0 0 10px var(--color-white),
-    0 0 11px var(--color-white),
-    0 0 12px var(--color-white),
-    0 0 13px var(--color-white),
-    0 0 14px var(--color-white),
-    0 0 15px var(--color-white);
+  text-shadow: var(--text-shadow-glow);
 }
 
 .right .performer {
