--- a/src/components/ConversionScene/animations.module.css
+++ b/src/components/ConversionScene/animations.module.css
@@ -1,20 +1,9 @@
 :root {
   --text-shadow-glow:
-    0 0 1px var(--color-white),
-    0 0 2px var(--color-white),
-    0 0 3px var(--color-white),
-    0 0 4px var(--color-white),
-    0 0 5px var(--color-white),
-    0 0 6px var(--color-white),
-    0 0 7px var(--color-white),
-    0 0 8px var(--color-white),
-    0 0 9px var(--color-white),
-    0 0 10px var(--color-white),
-    0 0 11px var(--color-white),
-    0 0 12px var(--color-white),
-    0 0 13px var(--color-white),
-    0 0 14px var(--color-white),
-    0 0 15px var(--color-white);
+    0 0 1px var(--color-white), 0 0 2px var(--color-white), 0 0 3px var(--color-white), 0 0 4px var(--color-white),
+    0 0 5px var(--color-white), 0 0 6px var(--color-white), 0 0 7px var(--color-white), 0 0 8px var(--color-white),
+    0 0 9px var(--color-white), 0 0 10px var(--color-white), 0 0 11px var(--color-white), 0 0 12px var(--color-white),
+    0 0 13px var(--color-white), 0 0 14px var(--color-white), 0 0 15px var(--color-white);
 }
 
 @keyframes slideInFromLeft {
