--- a/src/components/ConversionScene/NextPerformanceDetail.module.css
+++ b/src/components/ConversionScene/NextPerformanceDetail.module.css
@@ -55,6 +55,11 @@
 }
 
 .description {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
   font-size: 40px;
   color: var(--color-black);
   word-break: keep-all;
