--- a/src/components/PerformanceItem/index.module.css
+++ b/src/components/PerformanceItem/index.module.css
@@ -32,8 +32,10 @@
 }
 
 .title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: calc(65px - 22px);
   font-size: 18px;
   font-weight: bold;
-  line-height: calc(65px - 22px);
-  text-align: center;
 }
