--- a/src/components/ConversionScene/NextPerformanceDetail.module.css
+++ b/src/components/ConversionScene/NextPerformanceDetail.module.css
@@ -63,6 +63,7 @@
   -webkit-line-clamp: 4;
   line-clamp: 4;
   font-size: 40px;
+  line-height: 1.3em;
   color: var(--color-black);
   word-break: break-all;
   text-shadow: var(--text-shadow-glow);
